--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Chase Forestello | Web Developer</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+    <script src="https://kit.fontawesome.com/26f09e8c8b.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
@@ -28,15 +28,21 @@ topFunction()" id="myBtn" title="Go to top">Top
 <div class="container row">
     <div class="profileCard col-md-8">
         <h2>Full-Stack Web Developer</h2>
-        <p id="profileCardBio">Dedicated to writing clean code that delivers seamless, intuitive, secure, and efficient experiences.
+        <p id="profileCardBio">Dedicated to writing clean code that delivers seamless, intuitive, secure, and efficient
+            experiences.
             I am highly adaptable and can quickly find solutions with the tools and skills I have.
             Organization and structure are my primary focuses.<br><br>Check out my projects down below!</p>
         <div class="buttons">
             <div class="bottom-section">
                 <div class="social-media">
-                    <a href="https://www.linkedin.com/in/chase-forestello/" target="_blank"><i class="fab contactLink fa-linkedin"></i></a>
-                    <a href="https://github.com/Chase-Forestello" target="_blank"><i class="fab contactLink fa-github"></i></a>
-                    <a href = "mailto: chase.forestello@gmail.com" target="_blank"><i class="fas contactLink fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/chase-forestello/" target="_blank"><i
+                            class="fab contactLink fa-linkedin"></i></a>
+                    <a href="https://github.com/Chase-Forestello" target="_blank"><i
+                            class="fab contactLink fa-github"></i></a>
+                    <a href="mailto: chase.forestello@gmail.com"><i class="fas contactLink fa-envelope"></i></a>
+                    <div id="resumeDiv">
+                        <a href="https://drive.google.com/file/d/1sXAHunf3I-1ih7Cg9m1w0TgABofDIgMQ/view?usp=sharing" target="_blank"><i class="fa-solid contactLink fa-file"></i></a><span>Resume</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -69,13 +75,20 @@ topFunction()" id="myBtn" title="Go to top">Top
     <div id="projectContainer" class="row">
         <div class="projectCard col-lg-5">
             <h2>GameFace</h2>
-            <p>GameFace is a single-page application social media platform that allows gamers to connect with other gamers in order to enhance their gaming experience. GameFace users are able to create and personalize their profile based on platform of choice, gamertags, and favorite games. Additionally, GameFace users connect with posts, likes, comments, and highlights. GameFace gives users the ability to find gaming partners based on games played, region, skill, and play style. Ultimately, GameFace is a networking solution that allows users to connect and grow as gamers in a safe and inclusive environment. </p>
+            <p>GameFace is a single-page application social media platform that allows gamers to connect with other
+                gamers in order to enhance their gaming experience. GameFace users are able to create and personalize
+                their profile based on platform of choice, gamertags, and favorite games. Additionally, GameFace users
+                connect with posts, likes, comments, and highlights. GameFace gives users the ability to find gaming
+                partners based on games played, region, skill, and play style. Ultimately, GameFace is a networking
+                solution that allows users to connect and grow as gamers in a safe and inclusive environment. </p>
             <div class="buttons">
                 <div class="bottom-section">
                     <div class="social-media projectLinks">
-                        <a href="https://github.com/GameFaceProductions/GameFace" target="_blank"><i class="fab projectLink fa-github"></i></a>
+                        <a title="GitHub" href="https://github.com/GameFaceProductions/GameFace" target="_blank"><i
+                                class="fab projectLink fa-github"></i></a>
                         <div class="demoDiv">
-                        <a href="https://game-face.io/" target="_blank"><i class="fas projectLink fa-play"></i></a><span>Live</span>
+                            <a title="Demo" href="https://game-face.io/" target="_blank"><i
+                                    class="fas projectLink fa-play"></i></a><span>Live</span>
                         </div>
                     </div>
                 </div>
@@ -99,13 +112,19 @@ topFunction()" id="myBtn" title="Go to top">Top
         </div>
         <div class="projectCard col-lg-5">
             <h2>Weather Map</h2>
-            <p>An interactive paired-programming web application with geolocation, geocoding, and the OpenWeather Weather API. This project utilizes the OpenWeather API, JavaScript, and HTML to allow users to enter any location based on name, address, coordinates, or direct marker selection and receive back a 5 day weather forecast for that area. A marker is dropped which behaves dynamically allowing the user to drag to new locations.</p>
+            <p>An interactive paired-programming web application with geolocation, geocoding, and the OpenWeather
+                Weather API. This project utilizes the OpenWeather API, JavaScript, and HTML to allow users to enter any
+                location based on name, address, coordinates, or direct marker selection and receive back a 5 day
+                weather forecast for that area. A marker is dropped which behaves dynamically allowing the user to drag
+                to new locations.</p>
             <div class="buttons">
                 <div class="bottom-section">
                     <div class="social-media projectLinks">
-                        <a title="GitHub" href="https://github.com/Chase-Forestello/ryan-chase-weathermap" target="_blank"><i class="fab projectLink fa-github"></i></a>
+                        <a title="GitHub" href="https://github.com/Chase-Forestello/ryan-chase-weathermap"
+                           target="_blank"><i class="fab projectLink fa-github"></i></a>
                         <div class="demoDiv">
-                            <a title="Demo" href="https://chase-forestello.github.io/weathermap/" target="_blank"><i class="fas projectLink fa-play"></i></a><span>Live</span>
+                            <a title="Demo" href="https://chase-forestello.github.io/weathermap/" target="_blank"><i
+                                    class="fas projectLink fa-play"></i></a><span>Live</span>
                         </div>
                     </div>
                 </div>
@@ -126,11 +145,16 @@ topFunction()" id="myBtn" title="Go to top">Top
         </div>
         <div class="projectCard col-lg-5">
             <h2>Movie Search Engine</h2>
-            <p>A paired-programming single-page application with CRUD functionality. This project allows users to search for movies by name and returns a card with the movie poster, title, director, genres, and plot summary. Through HTML and JavaScript DOM manipulation, users can add, edit, or delete movies from the collection through various modal prompts. The search engine makes use of The Movie Database API (TMDB) and Glitch to serve the backend.</p>
+            <p>A paired-programming single-page application with CRUD functionality. This project allows users to search
+                for movies by name and returns a card with the movie poster, title, director, genres, and plot summary.
+                Through HTML and JavaScript DOM manipulation, users can add, edit, or delete movies from the collection
+                through various modal prompts. The search engine makes use of The Movie Database API (TMDB) and Glitch
+                to serve the backend.</p>
             <div class="buttons">
                 <div class="bottom-section">
                     <div class="social-media projectLinks">
-                        <a title="GitHub" href="https://github.com/Shaquielle-Chase-MovieOrg/movies-shaquielle-chase" target="_blank"><i class="fab projectLink fa-github"></i></a>
+                        <a title="GitHub" href="https://github.com/Shaquielle-Chase-MovieOrg/movies-shaquielle-chase"
+                           target="_blank"><i class="fab projectLink fa-github"></i></a>
                     </div>
                 </div>
             </div>
@@ -150,13 +174,18 @@ topFunction()" id="myBtn" title="Go to top">Top
         </div>
         <div class="projectCard col-lg-5">
             <h2>Café Salastello</h2>
-            <p>A paired-programming web application with basic in memory CRUD functionality. This project consists of a coffee website built with HTML that serves as a filing cabinet for various roasts of coffee. Through features implementing JavaScript DOM manipulation, users can search for, add or remove coffees, and also provide descriptions for those coffees.</p>
+            <p>A paired-programming web application with basic in memory CRUD functionality. This project consists of a
+                coffee website built with HTML that serves as a filing cabinet for various roasts of coffee. Through
+                features implementing JavaScript DOM manipulation, users can search for, add or remove coffees, and also
+                provide descriptions for those coffees.</p>
             <div class="buttons">
                 <div class="bottom-section">
                     <div class="social-media projectLinks">
-                        <a title="GitHub" href="https://github.com/Chase-Forestello/coffee-chase-darien" target="_blank"><i class="fab projectLink fa-github"></i></a>
+                        <a title="GitHub" href="https://github.com/Chase-Forestello/coffee-chase-darien"
+                           target="_blank"><i class="fab projectLink fa-github"></i></a>
                         <div class="demoDiv">
-                            <a title="Demo" href="https://chase-forestello.github.io/cafe-salastello/" target="_blank"><i class="fas projectLink fa-play"></i></a><span>Live</span>
+                            <a title="Demo" href="https://chase-forestello.github.io/cafe-salastello/"
+                               target="_blank"><i class="fas projectLink fa-play"></i></a><span>Live</span>
                         </div>
                     </div>
                 </div>
@@ -175,11 +204,14 @@ topFunction()" id="myBtn" title="Go to top">Top
         </div>
         <div class="projectCard col-lg-5">
             <h2>Console Adventure Game</h2>
-            <p>Simple console based Java adventure game. This solo project allows a user to create a fantasy character and embark on a choose-your-own-adventure game built solely with Java.</p>
+            <p>Simple console based Java adventure game. This solo project allows a user to create a fantasy character
+                and embark on a choose-your-own-adventure game built solely with Java.</p>
             <div class="buttons">
                 <div class="bottom-section">
                     <div class="social-media projectLinks">
-                        <a title="GitHub" href="https://github.com/Chase-Forestello/codeup-java-exercises/tree/main/src/rpg_console_game" target="_blank"><i class="fab projectLink fa-github"></i></a>
+                        <a title="GitHub"
+                           href="https://github.com/Chase-Forestello/codeup-java-exercises/tree/main/src/rpg_console_game"
+                           target="_blank"><i class="fab projectLink fa-github"></i></a>
                     </div>
                 </div>
             </div>
@@ -197,9 +229,11 @@ topFunction()" id="myBtn" title="Go to top">Top
             <div class="buttons">
                 <div class="bottom-section">
                     <div class="social-media projectLinks">
-                        <a title="GitHub" href="https://github.com/Chase-Forestello/konami" target="_blank"><i class="fab projectLink fa-github"></i></a>
+                        <a title="GitHub" href="https://github.com/Chase-Forestello/konami" target="_blank"><i
+                                class="fab projectLink fa-github"></i></a>
                         <div class="demoDiv">
-                            <a title="Demo" href="https://chase-forestello.github.io/konami/" target="_blank"><i class="fas projectLink fa-play"></i></a><span>Live</span>
+                            <a title="Demo" href="https://chase-forestello.github.io/konami/" target="_blank"><i
+                                    class="fas projectLink fa-play"></i></a><span>Live</span>
                         </div>
                     </div>
                 </div>
